--- a/css_files/header.css
+++ b/css_files/header.css
@@ -5,7 +5,7 @@ header{
 a{
   text-decoration: none;
   font-family: "Klee One", cursive;
-  font-size: 22pt;
+  font-size: 150%;
 }
 
 .Header_Grid {
