--- a/css_files/header.css
+++ b/css_files/header.css
@@ -5,6 +5,7 @@ header{
 a{
   text-decoration: none;
   font-family: "Klee One", cursive;
+  color: #171313;
   font-size: 150%;
 }
 
@@ -32,7 +33,7 @@ a{
      top: -50px;
      height: 100px;
      width: 100%;
-     background-color: #e59de5;
+     background-color: #d0bece;
      border-radius: 10% 10% 60% 60%;
    }
    
