--- a/css_files/registration.css
+++ b/css_files/registration.css
@@ -14,19 +14,40 @@ p{
     align-items: center; /* Центрируем элементы по вертикали */
 }
 
+.div_picture_container{
+    height: 100%;
+    width: 100%;
+}
+
+.div_picture_container img{
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
+}
 .left_picture_container  {
 
-    padding-left: 50px;
+
+    box-shadow: 10px 5px 5px rgba(62, 62, 62, 0.374);
 
     width: 250px;
     height: 400px;
 }
 
+
+
+
+
+
+.text_in_form{ 
+    color: aliceblue;
+}
 input{
-    background-color: #D0BECE;
+ 
 }
 
 input[type] {
+    background-color: rgba(208, 190, 206, 1.0);
+    box-shadow: 1px 3px 3px rgba(62, 62, 62, 0.528);
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -43,6 +64,7 @@ input[type] {
   }
 
 .form_container{   
+    box-shadow: 10px 5px 5px rgba(62, 62, 62, 0.374);
     display: grid;
     grid-template-rows: repeat(6, auto);
     justify-items: center; /* Центрируем элементы по горизонтали */
@@ -50,18 +72,25 @@ input[type] {
 
 
     margin-left: 90px; /* Добавляем отступ слева */
-    background-color:#e59de5;
+    background-color: rgba(231, 140, 216, 0.24);
     margin-right: 50px;
     width: 300px;
     height: 400px;
 }
 
-.div_picture_container{
-    height: 100%;
+
+.Log_In_BTN{
+    border: 0;
+    background-color: rgba(204, 154, 199, 0.67);
+    box-shadow: 10px 5px 5px rgba(62, 62, 62, 0.374);
+    height: auto;
 }
 
-.div_picture_container img{
-    object-fit: fill;
-    width: 100%;
-    height: 100%;
+.Log_In_BTN:hover{
+    font: #000000;
+
+}
+.Log_In_BTN:active{
+    color: #000000;
+
 }
