--- a/css_files/header.css
+++ b/css_files/header.css
@@ -32,7 +32,7 @@ a{
      top: -50px;
      height: 100px;
      width: 100%;
-     background-color: #e59de5;
+     background-color: rgba(208, 190, 206, 1.0);
      border-radius: 10% 10% 60% 60%;
    }
    
