--- a/css_files/registration.css
+++ b/css_files/registration.css
@@ -6,7 +6,10 @@ p{
 .registration_form {
     background-color: #D0BECE;
     width: 90%;
-    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
     height: 500px;
     display: grid;
     grid-template-columns: repeat(2, auto);
