--- a/css_files/main_grid.css
+++ b/css_files/main_grid.css
@@ -1,13 +1,15 @@
 
 
 .Main_Grid_Container {
-    height: 1500px;
-    display: grid; /* Применяем grid */
-    grid-template-columns: repeat(3, 1fr); /* Три колонки одинаковой ширины */
-    gap: 10px; /* Промежуток между элементами */
-    justify-items: center; /* Центрируем элементы по горизонтали */
-    align-items: center; /* Центрируем элементы по вертикали */
-  }
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: auto;
+  display: grid; /* Применяем grid */
+  grid-template-columns: repeat(3, 1fr); /* Три колонки одинаковой ширины */
+  gap: 10px; /* Промежуток между элементами */
+  justify-items: center; /* Центрируем элементы по горизонтали */
+  align-items: center; /* Центрируем элементы по вертикали */
+}
   
   .item_Grid {
     width: 200px;
