--- a/css_files/footer.css
+++ b/css_files/footer.css
@@ -1,14 +1,16 @@
 
 footer{
+    position: relative;
+
 
     height: 10%;
 }
 
 
 .triangle_bottom{
+
     height: 150px; 
     width: 100%; 
-    bottom: 10%;
     background-color: rgba(208, 190, 206, 1.0);
-    clip-path: polygon(50% 0, 100% 50%, 100% 100%, 0 100%, 0 50%);
+    clip-path: polygon(50% 0, 100% 50%, 100% 100%, 0 200%, 0 50%);
 }
