--- a/css_files/registration.css
+++ b/css_files/registration.css
@@ -6,8 +6,8 @@ p{
 .registration_form {
     background-color: #D0BECE;
     width: 90%;
-    margin-top: 50px;
-    margin-bottom: 100px;
+    margin-top: 5%;
+    margin-bottom: 10%;
     margin-left: auto;
     margin-right: auto;
     height: 500px;
