mbe vse ravno na login

--- a/css_files/footer.css
+++ b/css_files/footer.css
@@ -1,16 +1,18 @@
-
-footer{
-    position: relative;
-
-
-    height: 10%;
+#footer {
+    position: absolute;
+    bottom: 0;
+    margin-top: 400px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0);
+    /* Прозрачный фон */
+    /* padding: 10px; */
+    text-align: center;
+    z-index: 999;
 }
 
-
-.triangle_bottom{
-
-    height: 150px; 
-    width: 100%; 
-    background-color: rgba(208, 190, 206, 1.0);
+.triangle_bottom {
+    height: 150px;
+    width: 100%;
+    background-color: rgba(248, 132, 169, 0.7);
     clip-path: polygon(50% 0, 100% 50%, 100% 100%, 0 200%, 0 50%);
 }
