--- a/css_files/registration.css
+++ b/css_files/registration.css
@@ -1,52 +1,45 @@
-p{
+p {
     font-family: "Klee One", cursive;
-
-
 }
+
 .registration_form {
-    background-color: #D0BECE;
-    width: 90%;
-    margin-top: 5%;
+    background-color: rgb(226, 179, 192);
+    width: 80%;
+    margin-top: 200px;
     margin-bottom: 10%;
     margin-left: auto;
     margin-right: auto;
-    height: 500px;
+    height: 600px;
     display: grid;
     grid-template-columns: repeat(2, auto);
-    justify-items: center; /* Центрируем элементы по горизонтали */
-    align-items: center; /* Центрируем элементы по вертикали */
+    justify-items: center;
+    /* Центрируем элементы по горизонтали */
+    align-items: center;
+    /* Центрируем элементы по вертикали */
 }
 
-.div_picture_container{
+.div_picture_container {
     height: 100%;
     width: 100%;
 }
 
-.div_picture_container img{
+.div_picture_container img {
     object-fit: fill;
     width: 100%;
     height: 100%;
 }
-.left_picture_container  {
 
-
+.left_picture_container {
     box-shadow: 10px 5px 5px rgba(62, 62, 62, 0.374);
-
     width: 250px;
     height: 400px;
 }
 
-
-
-
-
-
-.text_in_form{ 
+.text_in_form {
     color: aliceblue;
 }
-input{
- 
-}
+
+input {}
 
 input[type] {
     background-color: rgba(208, 190, 206, 1.0);
@@ -57,43 +50,73 @@ input[type] {
     box-sizing: border-box;
     border: 1px solid #000000;
     -webkit-transition: 0.5s;
-    
     transition: 0.5s;
     outline: none;
-  }
-  
-  input[type]:focus {
-    border: 2px solid #555;
-  }
+}
 
-.form_container{   
+input[type]:focus {
+    border: 2px solid #555;
+}
+
+.form_container {
     box-shadow: 10px 5px 5px rgba(62, 62, 62, 0.374);
     display: grid;
     grid-template-rows: repeat(6, auto);
-    justify-items: center; /* Центрируем элементы по горизонтали */
-    align-items: center; /* Центрируем элементы по вертикали */
-
-
-    margin-left: 90px; /* Добавляем отступ слева */
+    justify-items: center;
+    /* Центрируем элементы по горизонтали */
+    align-items: center;
+    /* Центрируем элементы по вертикали */
+    margin-left: 90px;
+    /* Добавляем отступ слева */
     background-color: rgba(231, 140, 216, 0.24);
     margin-right: 50px;
     width: 300px;
     height: 400px;
 }
 
-
-.Log_In_BTN{
+.Log_In_BTN {
     border: 0;
     background-color: rgba(204, 154, 199, 0.67);
     box-shadow: 10px 5px 5px rgba(62, 62, 62, 0.374);
     height: auto;
 }
 
-.Log_In_BTN:hover{
+.Log_In_BTN:hover {
     font: #000000;
-
 }
-.Log_In_BTN:active{
-    color: #000000;
 
+.Log_In_BTN:active {
+    color: #000000;
+}
+
+body {
+    background: radial-gradient(circle, rgb(204, 149, 169) 5%, rgb(223, 211, 211) 60%);
+}
+
+header {
+    background-color: #f8f9fa;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+.header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-content a {
+    text-decoration: none;
+    color: #272626;
+    font-weight: bold;
+}
+
+.header-content .logo {
+    color: #272626;
+    font-size: 1.5rem;
 }
