--- a/css_files/footer.css
+++ b/css_files/footer.css
@@ -1,18 +1,11 @@
-#footer {
-    position: absolute;
-    bottom: 0;
-    margin-top: 400px;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0);
-    /* Прозрачный фон */
-    /* padding: 10px; */
-    text-align: center;
-    z-index: 999;
+footer {
+    position: relative;
+    height: 10%;
 }
 
 .triangle_bottom {
     height: 150px;
     width: 100%;
-    background-color: rgba(248, 132, 169, 0.7);
+    background-color: rgb(219, 174, 187);
     clip-path: polygon(50% 0, 100% 50%, 100% 100%, 0 200%, 0 50%);
 }
